fixed checkbox alignment in form

--- a/trunk/css/1.css
+++ b/trunk/css/1.css
@@ -563,6 +563,11 @@ input[type='checkbox'] {
 	margin: 2px,10px,10px,10px;
 }
 
+input[type='checkbox'].form {
+	width:15px;
+	margin-top: 7px;
+}
+
 select.form {
         width:185px;
 	height:20px;
